fixed spacing and heights

--- a/wp-content/themes/mtb_mag_v2/sass/_article.scss
+++ b/wp-content/themes/mtb_mag_v2/sass/_article.scss
@@ -16,8 +16,8 @@ body.single-post {
 		.entry-header{
 			// margin: 0 auto;
 			margin-top: 400px;
-			background: white;
-			background: rgba(white, .95);
+			background: #e0e0e0;
+			background: rgba(#e0e0e0, .95);
 			max-width: none;
 			padding-top: 1px;
 
