--- a/wp-content/themes/mtb_mag_v2/sass/_responsive.scss
+++ b/wp-content/themes/mtb_mag_v2/sass/_responsive.scss
@@ -338,6 +338,12 @@ $contentMaxWidth: 975px;
 		position: fixed;
 	}
 
+	.primary-navigation{
+		border: 2px dashed orange;
+		// margin-top: 48px;
+		padding-top: 48px;
+	}
+
 
 	body.category {
 
